# medit

./: CMakeLists.txt  idea.md  idea.txt  todo.md
include/: #renderer.hh#  #screen_manager.hh#  buffer.hh   functions.hh  gap_buffer.hh  line.hh  shader.hh  text_renderer.hh
include/newpt/: pt_PieceTable.cpp
src/: buffer.cc  buffer.cc   buffer.hh  function_keys.txt  gapbuffer.cc  glad.c  line.cc  line.hh  line_test.cc  medit.cc  medit.cc.bak  meditgl.cc  peice_table.hh  rb_tree.hh  render.cc  render.hh  shader.cc  text_renderer.cc  text_renderer.hh  types.hh
src/glad/: glad.h
src/shaders/: cursor.frag  cursor.vs
